# ITMO-ICT-Math-Models-of-Historical-Processes-2023-2024

./: .gitignore  README.md
lr_1/: main.ipynb
lr_1/core/: main.ipynb
lr_2/core/data/: kwattrs.json  salaries.csv
lr_3/: main.ipynb  pyproject.toml
lr_4/: main.ipynb  pyproject.toml
lr_4/datasets/: gdp.csv  gld_mos.xlsx  idx_mos.xlsx  it_mos.xlsx  plt_mos.xlsx  sunspot.csv
lr_6/: main.ipynb  main.ipynb.tmp  pyproject.toml
lr_6/data/: average_age.csv  living_wage.csv  retirement_age.csv
src/lr_1/: pyproject.toml
src/lr_2/: pyproject.toml
src/lr_2/core/: analysis.ipynb
src/lr_2/src/: parse.ipynb
