[project]
name = "lr-3"
version = "0.1.0"
description = "Source code for the laboratory work №3"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9.2",
    "notebook>=7.2.2",
    "numpy>=2.1.1",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "sympy>=1.13.3",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.7",
]
