[project]
name = "lr-4"
version = "0.1.0"
description = "Source code for the laboratory work №4"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9.2",
    "notebook>=7.2.2",
    "numpy>=2.1.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.7",
]
