[project]
name = "lr-6"
version = "0.1.0"
description = "Source code for the laboratory work №6"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9.2",
    "notebook>=7.2.2",
    "numpy>=2.1.1",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.3",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.8",
]
