[tool.poetry]
name = "lr-1"
version = "0.1.0"
description = ""
authors = ["bezstrok"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^7.1.2"
pandas = "^2.2.1"
plotly = "^5.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
