[tool.poetry]
name = "lr-2"
version = "0.1.0"
description = ""
authors = ["bezstrok"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
notebook = "^7.1.2"
beautifulsoup4 = "^4.12.3"
tqdm = "^4.66.2"
ipywidgets = "^8.1.2"
aiohttp = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
